--- a/scoreboard.html
+++ b/scoreboard.html
@@ -15,6 +15,7 @@
 				<p style="color:#5ea1e0;"> 👮🏻 <span id="police">0</span> </p>
 				<p style="color:yellow;"> 🚖 <span id="taxi">0</span> </p>
 				<p style="color:grey;"> 🔧 <span id="mechanic">0</span> </p>
+				<p style="color:#616161;"> 🔥 <span id="fire">0</span> </p>
 				<!-- <p style="color:lightblue;"> 🐔 <span id="slaughterer">0</span> </p>
 				<p style="color:red;"> ⛽ <span id="fueler">0</span> </p>
 				<p style="color:green;"> 🌲 <span id="lumberjack">0</span> </p>				
@@ -22,8 +23,10 @@
 				<p style="color:lightblue;"> 🎥 <span id="reporter">0</span> </p>						
 				<!-- <p style="color:yellow;"> ⛏️ <span id="miner">0</span> </p> -->
 				<p style="color:#58ce93;"> 🏘️ <span id="estate">0</span> </p>
+				<p style="color:grey;"> 🗡 <span id="gang">0</span> </p>
 				<p style="color:#f8b119;"> 🚗 <span id="cardeal">0</span> </p>
 				<p style="color:#616161;"> 💣 <span id="arma">0</span> </p>
+				<p style="color:#5ea1e0;"> 🔫 <span id="mafia">0</span> </p>
 				<p style="color:rgb(126, 83, 77);"> 💼 <span id="stato">0</span> </p>
 				<p style="color:lightblue;"> 💤 <span id="unemployed">0</span> </p>
 			</div>
@@ -49,7 +52,7 @@
 		</div>
 
 		<div class="serverinfo">
-			Giocatori: <span id="player_count">0</span> / 128 <span style="font-size: 0.6vw"> | </span>Tempo di gioco: <span id="play_time"></span>
+			Players: <span id="player_count">0</span> / 128 <span style="font-size: 0.6vw"> | </span>Playing time: <span id="play_time"></span>
 		</div>
 
 	</div>
